--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,13 @@
             <artifactId>oshi-json</artifactId>
             <version>3.6.1</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.googlecode.xmemcached</groupId>
+            <artifactId>xmemcached</artifactId>
+            <version>2.4.6</version>
+        </dependency>
     </dependencies>
 
     <!--构建工具-->
